design: fix translation and small css issues

--- a/assets/styles/frontend/common/components/box/order-type.less
+++ b/assets/styles/frontend/common/components/box/order-type.less
@@ -13,6 +13,7 @@
         .clearfix();
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
     
         &__item {
             padding: 5px 10px;
