--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -151,7 +151,7 @@
                                                 {% endif %}
                                             </div>
                                         </div>
-                                        
+
                                         <div class="table-cart__messages">
                                             <div class="table-cart__messages__left">
                                                 <div class="table-cart__messages__item table-cart__messages__item--left">
@@ -161,7 +161,7 @@
                                                         </div>
                                                     {% endif %}
                                                 </div>
-                                                
+
                                                 <div class="table-cart__messages__item js-maximum-amount-warning display-none">
                                                     <div class="in-message in-message--without-gap in-message--warning">
                                                         {{ 'Větší množství není možné nakoupit'|trans }}
@@ -212,6 +212,9 @@
                         </div>
                     {{ form_end(form) }}
                 {% else %}
+                    <div class="box-cart__message">
+                        {{ render(controller('App\\Controller\\Front\\FlashMessageController:indexAction')) }}
+                    </div>
                     <div class="box-cart-empty">
                         <div class="box-cart-empty__image">
                             <img src="{{ asset('public/frontend/images/empty-cart.png') }}" alt="{{ 'Empty cart'|trans }}">
