--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -31,12 +31,18 @@
         {{ render(controller('App\\Controller\\Front\\SelfCanonicalController:getSelfCanonicalLink')) }}
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('public/frontend/images/favicons/apple-touch-icon.png') }}">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('public/frontend/images/favicons/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="192x192" href="{{ asset('public/frontend/images/favicons/android-chrome-192x192.png') }}">
+        <link rel="icon" type="image/png" sizes="512x512" href="{{ asset('public/frontend/images/favicons/android-chrome-512x512.png') }}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('public/frontend/images/favicons/favicon-16x16.png') }}">
         <link rel="manifest" href="{{ asset('public/frontend/images/favicons/site.webmanifest') }}">
         <link rel="mask-icon" href="{{ asset('public/frontend/images/favicons/safari-pinned-tab.svg') }}" color="#0077b3">
         <link rel="shortcut icon" href="{{ asset('public/frontend/images/favicons/favicon.ico') }}">
         <meta name="msapplication-TileColor" content="#0077b3">
         <meta name="msapplication-TileImage" content="{{ asset('public/frontend/images/favicons/mstile-144x144.png') }}">
+        <meta name="msapplication-square70x70logo" content="{{ asset('public/frontend/images/favicons/mstile-70x70.png') }}">
+        <meta name="msapplication-square150x150logo" content="{{ asset('public/frontend/images/favicons/mstile-150x150.png') }}">
+        <meta name="msapplication-wide310x150logo" content="{{ asset('public/frontend/images/favicons/mstile-310x150.png') }}">
+        <meta name="msapplication-square310x310logo" content="{{ asset('public/frontend/images/favicons/mstile-310x310.png') }}">
         <meta name="msapplication-config" content="{{ asset('public/frontend/images/favicons/browserconfig.xml') }}">
         <meta name="theme-color" content="#0077b3">
 
