--- a/assets/styles/frontend/common/components/window/popup.less
+++ b/assets/styles/frontend/common/components/window/popup.less
@@ -88,6 +88,14 @@
         .window-popup--no-padding & {
             padding: 0;
         }
+
+        &__cofidis {
+            width: 100%;
+            height: calc( ~"100vh - 2 * @{window-popup-inner-padding} - 2 * @{window-popup-space-around-big} - 40px" );
+            padding: 30px 0 25px;
+            
+            border: 0;
+        }
     }
 
     &__close {
