--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -49,9 +49,15 @@
                                             </a>
                                         </li>
                                         <li class="list-socials__item">
-                                            <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/tropicliberec.cz/" target="_blank">
-                                                {{ 'Facebook'|trans }}
-                                            </a>
+                                            {% if isSlovakDomain() is same as (true) %}
+                                                <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/tropicfishing.sk" target="_blank">
+                                                    {{ 'Facebook'|trans }}
+                                                </a>
+                                            {% else %}
+                                                <a class="list-socials__item__link list-socials__item__link--facebook btn-with-border" href="https://www.facebook.com/tropicliberec.cz/" target="_blank">
+                                                    {{ 'Facebook'|trans }}
+                                                </a>
+                                            {% endif %}
                                         </li>
                                         <li class="list-socials__item">
                                             <a class="list-socials__item__link list-socials__item__link--youtube btn-with-border" href="https://www.youtube.com/channel/UC6o1AK-Fi_XkISYidB3NOOA" target="_blank">
