FE variant detail: do not redirect to main variant page
- the page is the same as for the main variant, just the URL is different, H1, and page title

--- a/templates/Front/Content/Product/detail.html.twig
+++ b/templates/Front/Content/Product/detail.html.twig
@@ -10,7 +10,11 @@
 {% endblock %}
 
 {% block title %}
-    {{ product.getSeoTitle(domain.id)|default(product.name) }}
+    {% if currentVariant is not null %}
+        {{ currentVariant.getSeoTitle(domain.id)|default(currentVariant.name) }}
+    {% else %}
+        {{ product.getSeoTitle(domain.id)|default(product.name) }}
+    {% endif %}
 {% endblock %}
 
 {% block breadcrumbDetail %}
@@ -24,7 +28,7 @@
 
 {% block main_content %}
     <div itemscope itemtype="http://schema.org/Product">
-        {{ boxDetail.productBox(product, youtubeVideoIds, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, parentSetViews, showCofidisBanner) }}
+        {{ boxDetail.productBox(product, currentVariant, youtubeVideoIds, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, parentSetViews, showCofidisBanner) }}
     </div>
 
     {% if productBlogArticles|length > 0 %}
