--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -1,4 +1,4 @@
-{% macro productBox(product, youtubeVideoIds, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, parentSetViews, showCofidisBanner) %}
+{% macro productBox(product, currentVariant, youtubeVideoIds, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, parentSetViews, showCofidisBanner) %}
     {% import _self as self %}
     {% import 'Front/Inline/Product/productFlagsMacro.html.twig' as productFlags %}
     {% import 'Front/Content/Product/productListMacro.html.twig' as productList %}
@@ -104,7 +104,11 @@
                     <div class="box-detail__info">
                         {% if not typeSetOrSupplierSet %}
                             <h1 class="box-detail__info__title{% if product.isMainVariant %} box-detail__info__title--big-gap{% endif %}" itemprop="name">
-                                {{ product.getSeoH1(domain.id)|default(product.name) }}
+                                {% if currentVariant is not null %}
+                                    {{ currentVariant.getSeoH1(domain.id)|default(currentVariant.name) }}
+                                {% else %}
+                                    {{ product.getSeoH1(domain.id)|default(product.name) }}
+                                {% endif %}
                             </h1>
                         {% endif %}
 
