--- a/templates/Front/Inline/Product/productStickersMacro.html.twig
+++ b/templates/Front/Inline/Product/productStickersMacro.html.twig
@@ -5,9 +5,17 @@
     {% if stickers|length > 0 or (productOrProductView.warranty > 24 and productOrProductView.supplierSet is same as (false)) or productOrProductView.recommended %}
         <div class="{{ cssClass }}">
             {% if productOrProductView.recommended %}
-                <img src="{{ asset('public/frontend/images/recommended.png') }}" alt="{{ 'Nálepka Tropic doporučuje'|trans }}" loading="lazy">
+                {% if isSlovakDomain() is same as (true) %}
+                    <img src="{{ asset('public/frontend/images/recommended-sk.png') }}" alt="{{ 'Nálepka Tropic doporučuje'|trans }}" loading="lazy">
+                {% else %}
+                    <img src="{{ asset('public/frontend/images/recommended.png') }}" alt="{{ 'Nálepka Tropic doporučuje'|trans }}" loading="lazy">
+                {% endif %}
             {% elseif productOrProductView.warranty > 24 and productOrProductView.supplierSet is same as (false) %}
-                <img src="{{ asset('public/frontend/images/extended-warranty.png') }}" alt="{{ 'Nálepka Prodloužená záruka'|trans }}" loading="lazy">
+                {% if isSlovakDomain() is same as (true) %}
+                    <img src="{{ asset('public/frontend/images/extended-warranty-sk.png') }}" alt="{{ 'Nálepka Predĺžená záruka'|trans }}" loading="lazy">
+                {% else %}
+                    <img src="{{ asset('public/frontend/images/extended-warranty.png') }}" alt="{{ 'Nálepka Prodloužená záruka'|trans }}" loading="lazy">
+                {% endif %}
             {% else %}
                 {{ image(stickers|first) }}
             {% endif %}
