[TF-1197] after add to cart window: fix formatting of error messages
- the "raw" filter must be applied to the whole error message in the template
- AddProductFormType: added a more specific constraint message for quantity minimum amout
- CartController: use addErrorFlash instead of addErrorFlashTwig to render the message properly (including "&nbsp;")

--- a/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
+++ b/templates/Front/Inline/Cart/afterAddWithErrorWindow.html.twig
@@ -7,7 +7,7 @@
         </div>
         <ul class="list-simple">
             {% for error in errors %}
-                <li class="list-simple__item">{{ error }}</li>
+                <li class="list-simple__item">{{ error|raw }}</li>
             {% endfor %}
         </ul>
     </div>
