--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -134,9 +134,11 @@
                                                 </div>
                                                 {% if quantifiedItemsDiscountsByIndex[index] is defined %}
                                                     {% set quantifiedItemDiscount = quantifiedItemsDiscountsByIndex[index] %}
-                                                    <div class="table-cart__cell__discount">
-                                                        -{{ quantifiedItemDiscount.priceWithVat|price }}
-                                                    </div>
+                                                    {% if quantifiedItemDiscount is not empty %}
+                                                        <div class="table-cart__cell__discount">
+                                                            -{{ quantifiedItemDiscount.priceWithVat|price }}
+                                                        </div>
+                                                    {% endif %}
                                                 {% endif %}
                                                 {% if promoCodesIndexedById is not empty %}
                                                     <div class="table-cart__cell__discount">
