--- a/assets/styles/frontend/common/components/list/products-slider.less
+++ b/assets/styles/frontend/common/components/list/products-slider.less
@@ -1,4 +1,3 @@
-@list-products-slider-item-count: 4;
 // different between list-products-slider-item-gap and list-products-slider-item-inner-padding hast to be min. 20px, becouse it is size of shadow
 @list-products-slider-item-gap: 30px;
 @list-products-slider-item-inner-padding: 10px;
@@ -25,24 +24,8 @@
         margin-bottom: -@list-products-slider-button-height;
     }
 
-    &.list-products-slider--with-button {
-        .slick-list {
-            padding: 40px (@list-products-slider-item-gap - 10px) 20px 0;
-
-            @media @query-lg {
-                padding: 40px @list-products-slider-item-gap (30px + @list-products-slider-button-height) 0;
-            }
-        }
-    }
-
     .slick-list {
-        overflow: hidden;
-        
-        padding: 40px @list-products-slider-item-gap / 2 40px 0;
-
-        @media @query-lg {
-            padding: 40px @list-products-slider-item-gap 40px 0;
-        }
+        width: 100%;
     }
 
     .slick-track {
@@ -155,10 +138,20 @@
     }
 
     &__list {
-        display: none;
+        display: flex;
+        overflow: hidden;
+        padding: 40px @list-products-slider-item-gap / 2 40px 0;
 
-        &.slick-initialized {
-            display: block;
+        @media @query-lg {
+            padding: 40px @list-products-slider-item-gap 40px 0;
+        }
+
+        .list-products-slider--with-button & {
+            padding: 40px (@list-products-slider-item-gap - 10px) 20px 0;
+
+            @media @query-lg {
+                padding: 40px @list-products-slider-item-gap (30px + @list-products-slider-button-height) 0;
+            }
         }
     }
 
@@ -169,10 +162,26 @@
 
     &__item {
         margin-left: @list-products-slider-item-gap / 2;
-        width: calc(~"@{calc-base}/@{list-products-slider-item-count}");
+        min-width: 100% - @list-products-slider-item-gap / 2;
+
+        @media @query-md {
+            min-width: calc(~"@{calc-base} / 2 - @{list-products-slider-item-gap} / 2");
+        }
 
         @media @query-lg {
             margin-left: @list-products-slider-item-gap;
+        }
+
+        @media @query-vl {
+            min-width: calc(~"@{calc-base} / 3 - @{list-products-slider-item-gap}");
+        }
+
+        @media @query-xl {
+            min-width: calc(~"@{calc-base} / 4 - @{list-products-slider-item-gap}");
+        }
+
+        .slick-initialized & {
+            min-width: auto !important;
         }
 
         &:focus {
