design: fix style issues

--- a/assets/styles/frontend/common/components/box/breadcrumb.less
+++ b/assets/styles/frontend/common/components/box/breadcrumb.less
@@ -2,8 +2,8 @@
 @box-breadcrumb-padding-vertical: 15px;
 @box-breadcrumb-padding-vertical-small: 5px;
 @box-breadcrumb-font-size: @font-size-small;
-@box-breadcrumb-top-move: -7px;
-@box-breadcrumb-top-move-small: -2px;
+@box-breadcrumb-top-move: -5px;
+@box-breadcrumb-top-move-small: 0;
 @box-breadcrumb-bottom-gap: 25px;
 
 .box-breadcrumb {
