--- a/templates/Front/Content/Heureka/reviews.html.twig
+++ b/templates/Front/Content/Heureka/reviews.html.twig
@@ -3,7 +3,7 @@
         <h3 class="box-reviews__title">
             {{ 'Hodnocení našich zákazníků'|trans }}
         </h3>
-        <a class="box-reviews__subtitle" href="{{ getHeurekaReviewsUrl() }}">
+        <a class="box-reviews__subtitle" href="{{ getHeurekaReviewsUrl() }}" target="_blank">
             {{ 'Další hodnocení zákazníků'|trans }}
         </a>
     </div>
