--- a/templates/Front/Content/Login/windowForm.html.twig
+++ b/templates/Front/Content/Login/windowForm.html.twig
@@ -5,10 +5,10 @@
         </div>
         <div class="display-none in-message in-message--alert js-login-validation-errors"></div>
         <div class="box-login__item">
-            {{ form_row(form.email, { 'label': 'E-mail'|trans, attr: { placeholder: 'E-mail'|trans }}) }}
+            {{ form_row(form.email, { 'label': 'E-mail'|trans, attr: {  }}) }}
         </div>
         <div class="box-login__item box-login__item--move-top">
-            {{ form_row(form.password, { 'label': 'Heslo'|trans, attr: { placeholder: 'Heslo'|trans }}) }}
+            {{ form_row(form.password, { 'label': 'Heslo'|trans, attr: {  }}) }}
         </div>
 
         {% do form.rememberMe.setRendered %}
