base.html.twig: set default page title

--- a/templates/Front/Layout/base.html.twig
+++ b/templates/Front/Layout/base.html.twig
@@ -46,7 +46,7 @@
         <meta name="msapplication-config" content="{{ asset('public/frontend/images/favicons/browserconfig.xml') }}">
         <meta name="theme-color" content="#0077b3">
 
-        <title>{% block title %}{{ 'Shopsys Commerce Cloud'|trans }}{% endblock %} {{ getSeoTitleAddOn() }}</title>
+        <title>{% block title %}{{ 'Tropic Fishing'|trans }}{% endblock %} {{ getSeoTitleAddOn() }}</title>
     </head>
 
     <body class="web domain{{ getDomain().id }}" id="top">
