design: remove todo coder from templates

--- a/templates/Front/Inline/Cart/cartBox.html.twig
+++ b/templates/Front/Inline/Cart/cartBox.html.twig
@@ -40,7 +40,7 @@
                 {% endif %}
             </div>
             <div class="box-dropdown__options box-dropdown__options--basket js-dropdown-options">
-                <div class="js-cart-box-content" style="min-height: 100px"> {# TODO KOD - I need the min-height of this element so the loader is displayed properly #}
+                <div class="box-dropdown__options__cart js-cart-box-content">
                 </div>
             </div>
         {% endif %}
