--- a/templates/Front/Content/Order/index.html.twig
+++ b/templates/Front/Content/Order/index.html.twig
@@ -71,7 +71,7 @@
                 <div class="web__container web__container--border-radius web__container--light">
                     <footer class="footer-bottom footer-bottom--small">
                         <div class="footer-bottom__copyright dont-print">
-                            {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Tropic Fishing s.r.o. Všechna práva vyhrazena.'|trans }}
+                            {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Tropic Liberec s.r.o. Všechna práva vyhrazena.'|trans }}
                         </div>
                         <div class="footer-bottom__rules">
                             {{ 'Podle zákona o evidenci tržeb je prodávající povinen vystavit kupujícímu účtenku. Zároveň je povinen zaevidovat přijatou tržbu u správce daně online; v případě technického výpadku pak nejpozději do 48 hodin.'|trans }}
