--- a/templates/Front/Layout/footer.html.twig
+++ b/templates/Front/Layout/footer.html.twig
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                         <div class="footer-bottom__copyright dont-print">
-                            {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Tropic Fishing s.r.o. Všechna práva vyhrazena.'|trans }}
+                            {{ 'Copyright © ' ~ 'now'|date('Y') ~ ', Tropic Liberec s.r.o. Všechna práva vyhrazena.'|trans }}
                         </div>
                         <div class="footer-bottom__rules">
                             {{ 'Podle zákona o evidenci tržeb je prodávající povinen vystavit kupujícímu účtenku. Zároveň je povinen zaevidovat přijatou tržbu u správce daně online; v případě technického výpadku pak nejpozději do 48 hodin.'|trans }}
